# vartui

./: .gitignore  .gitlab-ci.yml  Cargo.toml  README.md
.github/workflows/: ci-release.yml
scripts/homebrew/: generate-formula.sh
src/: main.rs
src/application/: app.rs  cli.rs  input.rs  mcp.rs  mod.rs
src/domain/: config.rs  models.rs
src/infrastructure/: api_client.rs  config.rs
src/ui/: mod.rs  theme.rs  tui.rs
src/ui/components/: config_modal.rs  entry_modal.rs  mod.rs
src/utils/: logging.rs  mod.rs  parsing.rs  version.rs
