[package]
name = "timesheet_tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "vartui"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
reqwest = { version = "0.13", features = ["blocking", "json", "query", "rustls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["clock"] }
dotenvy = "0.15"
confy = "2.0.0"
toon = "0.1.2"
ratatui-themes = "0.1.8"
